crates/toml_edit/tests/snapshots/invalid/table/redefine-02.stderr
TOML parse error at line 3, column 5
  |
3 | [t1.t2]
  |     ^^
duplicate key
